Added instuction on how to use

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <canvas id="webGLCanvas" width="800px" height="800px"></canvas>
+    <p>Use WASD to move the object</p>
 </body>
 
 </html>
