--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js"></script>
-    <script src="../sauce/inputManager.js"></script>
-    <script src="../sauce/camera.js"></script>
-    <script src="../sauce/drawable.js"></script>
-    <script src="../sauce/main.js"></script>
+    <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js" type="application/javascript"></script>
+    <script src="../sauce/inputManager.js" type="application/javascript"></script>
+    <script src="../sauce/camera.js" type="application/javascript"></script>
+    <script src="../sauce/drawable.js" type="application/javascript"></script>
+    <script src="../sauce/main.js" type="application/javascript"></script>
     <title>Sauce demo</title>
 </head>
 
