Added world system + fixed camera

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js" type="application/javascript"></script>
-    <script src="../sauce/inputManager.js" type="application/javascript"></script>
-    <script src="../sauce/camera.js" type="application/javascript"></script>
-    <script src="../sauce/drawable.js" type="application/javascript"></script>
-    <script src="../sauce/main.js" type="application/javascript"></script>
+    <script src="/sauce/inputManager.js" type="application/javascript"></script>
+    <script src="/sauce/camera.js" type="application/javascript"></script>
+    <script src="/sauce/tile.js" type="application/javascript"></script>
+    <script src="/sauce/tiles/brickTile.js"></script>
+    <script src="sauce/tiles/testTile.js"></script>
+    <script src="/sauce/worldManager.js" type="application/javascript"></script>
+    <script src="/sauce/main.js" type="application/javascript"></script>
     <title>Sauce demo</title>
 </head>
 
