Added sound and quick entity

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="margin: 0 !important; padding: 0 !important;">
 
 <head>
     <meta charset="UTF-8">
@@ -10,9 +10,8 @@
     <title>Sauce demo</title>
 </head>
 
-<body>
-    <canvas id="webGLCanvas" width="1000px" height="1000px"></canvas>
-    <p>Use WASD to move the object</p>
-</body>
+<body style="margin: 0 !important; padding: 0 !important;">
+    <img src="/assets/textures/healthbar_full.png" style="z-index:9999;position:absolute; top:0; left:0; right:0; bottom:0;">
+    <canvas style="margin: 0 !important; padding: 0 !important; z-index: 1;" id="webGLCanvas"></canvas>
 
 </html>
